Fix: display github about icon on mobile

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ p {
 
 }
 
-.about-icons > img{
+.about-icon{
     width: 3rem;
     cursor: pointer;
 }
